feat: Implementando contexto e input para teste de ambos os LLMs

--- a/simple_call.ipynb
+++ b/simple_call.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "c550b61e",
    "metadata": {},
    "outputs": [],
@@ -20,6 +20,7 @@
     "# LLMs\n",
     "from openai import OpenAI\n",
     "from google import genai\n",
+    "from google.genai import types\n",
     "\n",
     "# Para validação de campos e geração de uma resposta estruturada\n",
     "from pydantic import BaseModel\n",
@@ -30,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "db8397b7",
    "metadata": {},
    "outputs": [],
@@ -43,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "71c61a82",
    "metadata": {},
    "outputs": [],
@@ -51,6 +52,212 @@
     "# Alimentando o client com as devidas chaves de api\n",
     "client_openai = OpenAI(api_key=openai_api_key)\n",
     "client_gemini = genai.Client(api_key=gemini_api_key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "71ec5d3e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Claro! A composição química geral de um ser humano pode ser descrita em termos dos elementos e das moléculas que constituem o corpo. Vou detalhar os principais componentes:\n",
+      "\n",
+      "### 1. **Elementos Químicos Principais**\n",
+      "O corpo humano é formado principalmente por alguns elementos químicos, que juntos representam cerca de 99% da massa corporal:\n",
+      "\n",
+      "- **Oxigênio (O)**: ~65%  \n",
+      "  Principalmente na água corporal e em moléculas orgânicas.\n",
+      "  \n",
+      "- **Carbono (C)**: ~18%  \n",
+      "  Base das moléculas orgânicas (proteínas, lipídios, carboidratos, ácidos nucleicos).\n",
+      "  \n",
+      "- **Hidrogênio (H)**: ~10%  \n",
+      "  Encontrado na água e em todas as moléculas orgânicas.\n",
+      "  \n",
+      "- **Nitrogênio (N)**: ~3%  \n",
+      "  Presente principalmente em proteínas e ácidos nucleicos.\n",
+      "  \n",
+      "- **Cálcio (Ca)**: ~1,5%  \n",
+      "  Principalmente nos ossos e dentes.\n",
+      "  \n",
+      "- **Fósforo (P)**: ~1%  \n",
+      "  Presente nos ossos, ATP, ácidos nucleicos.\n",
+      "\n",
+      "Outros elementos em menores quantidades incluem potássio, enxofre, sódio, cloro, magnésio, ferro, zinco, entre outros.\n",
+      "\n",
+      "### 2. **Composição Molecular**\n",
+      "O corpo humano é composto basicamente por:\n",
+      "\n",
+      "- **Água (~60-70%)**  \n",
+      "  Principal componente do corpo, solvente universal, participa de reações químicas e mantém o meio interno.\n",
+      "\n",
+      "- **Proteínas (~18-20%)**  \n",
+      "  Estruturais (colágeno, queratina), enzimáticas, regulatórias, transporte, defesa.\n",
+      "\n",
+      "- **Lipídios (~10-15%)**  \n",
+      "  Reserva energética, componentes das membranas celulares (fosfolipídios, colesterol).\n",
+      "\n",
+      "- **Carboidratos (~1-2%)**  \n",
+      "  Fonte rápida de energia (glicose, glicogênio).\n",
+      "\n",
+      "- **Ácidos nucleicos (~1%)**  \n",
+      "  DNA e RNA, armazenam e transmitem informação genética.\n",
+      "\n",
+      "- **Outros compostos**: vitaminas, minerais, metabólitos diversos.\n",
+      "\n",
+      "---\n",
+      "\n",
+      "Se desejar, posso aprofundar em algum desses tópicos ou apresentar a composição em termos moleculares detalhados!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Chamada simples com chatgpt, bastante arcaica: \n",
+    "\n",
+    "context = \"Você é um professor de biologia especialista em bioquímica com pós-doutorado feito em Harvard Medicine School\"\n",
+    "\n",
+    "response_openai = client_openai.responses.create(\n",
+    "    model=\"gpt-4.1-mini\",\n",
+    "    instructions=context,\n",
+    "    input= \"Qual a composição química geral de um ser humano\",\n",
+    "    temperature=0.5\n",
+    ")\n",
+    "\n",
+    "print(response_openai.output_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dfad6ab5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ah, que excelente pergunta! É um tema fundamental e belíssimo que nos permite apreciar a complexidade e a engenharia molecular que somos. Como professor de bioquímica, é um prazer mergulhar nessa composição que nos define.\n",
+      "\n",
+      "Em uma visão geral, o corpo humano é uma sinfonia extraordinariamente bem orquestrada de elementos químicos, organizados em moléculas complexas que interagem dinamicamente. Vamos destrinchar isso em níveis:\n",
+      "\n",
+      "---\n",
+      "\n",
+      "**Composição Química Geral de um Ser Humano**\n",
+      "\n",
+      "**I. Nível Atômico: Os Elementos Químicos**\n",
+      "\n",
+      "Aproximadamente 99% da massa corporal humana é composta por apenas seis elementos principais, e a lista se expande um pouco para incluir outros essenciais.\n",
+      "\n",
+      "**A. Os Elementos Mais Abundantes (Os \"Grandes Quatro\" e Outros Essenciais):**\n",
+      "\n",
+      "1.  **Oxigênio (O): ~65%**\n",
+      "    *   O componente mais abundante, principalmente na forma de água (H₂O). Essencial para a respiração celular (cadeia transportadora de elétrons) e inúmeras reações metabólicas.\n",
+      "2.  **Carbono (C): ~18%**\n",
+      "    *   O \"esqueleto\" de todas as moléculas orgânicas (proteínas, lipídios, carboidratos, ácidos nucleicos). Sua capacidade de formar quatro ligações covalentes estáveis permite uma vasta diversidade de estruturas.\n",
+      "3.  **Hidrogênio (H): ~10%**\n",
+      "    *   Também majoritariamente na água, mas também parte integral de todas as moléculas orgânicas. Participa de ligações de hidrogênio, fundamentais para a estrutura de macromoléculas.\n",
+      "4.  **Nitrogênio (N): ~3%**\n",
+      "    *   Um componente chave de proteínas (grupos amino dos aminoácidos) e ácidos nucleicos (bases nitrogenadas).\n",
+      "5.  **Cálcio (Ca): ~1,5%**\n",
+      "    *   Primordial para a estrutura óssea e dentária. Crucial na contração muscular, coagulação sanguínea, sinalização celular e liberação de neurotransmissores.\n",
+      "6.  **Fósforo (P): ~1,0%**\n",
+      "    *   Componente essencial de ossos e dentes, ácidos nucleicos (DNA e RNA), fosfolipídios (membranas celulares) e ATP (adenosina trifosfato – a moeda energética da célula).\n",
+      "7.  **Potássio (K): ~0,35%**\n",
+      "    *   Um eletrólito vital para o equilíbrio de fluidos, função nervosa e muscular (potenciais de membrana, condução nervosa).\n",
+      "8.  **Enxofre (S): ~0,25%**\n",
+      "    *   Encontrado em certos aminoácidos (metionina, cisteína) e, portanto, em muitas proteínas, onde contribui para a formação de pontes dissulfeto, essenciais para a estrutura terciária.\n",
+      "9.  **Sódio (Na): ~0,15%**\n",
+      "    *   Outro eletrólito crucial para o equilíbrio de fluidos, função nervosa e muscular, e transporte ativo através das membranas.\n",
+      "10. **Cloro (Cl): ~0,15%**\n",
+      "    *   Principal ânion extracelular, importante para o equilíbrio eletrolítico e a produção de ácido clorídrico no estômago.\n",
+      "11. **Magnésio (Mg): ~0,05%**\n",
+      "    *   Cofator para mais de 300 enzimas, crucial na produção de ATP, função muscular e nervosa, e saúde óssea.\n",
+      "\n",
+      "**B. Elementos Traço (Oligoelementos):**\n",
+      "Presentes em quantidades mínimas (inferiores a 0,01%), mas absolutamente vitais para a vida.\n",
+      "\n",
+      "*   **Ferro (Fe):** Componente da hemoglobina (transporte de oxigênio) e de enzimas envolvidas na respiração celular.\n",
+      "*   **Zinco (Zn):** Cofator de mais de 300 enzimas, importante para o sistema imunológico, cicatrização de feridas, síntese de proteínas e DNA.\n",
+      "*   **Cobre (Cu):** Essencial para o metabolismo do ferro, produção de energia, formação de tecidos conjuntivos e função cerebral.\n",
+      "*   **Iodo (I):** Componente dos hormônios tireoidianos, que regulam o metabolismo.\n",
+      "*   **Selênio (Se):** Antioxidante, componente de enzimas como a glutationa peroxidase.\n",
+      "*   **Flúor (F):** Fortalece ossos e dentes.\n",
+      "*   **Manganês (Mn):** Cofator de várias enzimas, importante para o metabolismo, função óssea e cerebral.\n",
+      "*   **Cromo (Cr):** Potencia a ação da insulina no metabolismo da glicose.\n",
+      "*   **Molibdênio (Mo):** Cofator de enzimas importantes no metabolismo de purinas e sulfitos.\n",
+      "*   **Cobalto (Co):** Parte da vitamina B12.\n",
+      "\n",
+      "---\n",
+      "\n",
+      "**II. Nível Molecular: As Macromoléculas da Vida**\n",
+      "\n",
+      "A organização desses elementos forma as moléculas que compõem as células, tecidos e órgãos.\n",
+      "\n",
+      "1.  **Água (H₂O): ~60-70% da massa corporal**\n",
+      "    *   Sem dúvida, o componente mais abundante. É o solvente universal, essencial para todas as reações bioquímicas, transporte de nutrientes e resíduos, regulação da temperatura corporal e manutenção da estrutura celular.\n",
+      "2.  **Proteínas: ~15-20%**\n",
+      "    *   As \"máquinas\" e \"estruturas\" do corpo. Compostos por aminoácidos, desempenham uma vasta gama de funções:\n",
+      "        *   **Estrutural:** Colágeno (tecidos conectivos), queratina (cabelo, unhas, pele).\n",
+      "        *   **Enzimática:** Catalisam quase todas as reações bioquímicas.\n",
+      "        *   **Transporte:** Hemoglobina (oxigênio), transportadores de membrana.\n",
+      "        *   **Contração:** Actina e miosina (músculos).\n",
+      "        *   **Defesa:** Anticorpos.\n",
+      "        *   **Hormonal:** Insulina, hormônio do crescimento.\n",
+      "        *   **Receptores:** Para neurotransmissores e hormônios.\n",
+      "3.  **Lipídios (Gorduras): ~10-15% (altamente variável)**\n",
+      "    *   Moléculas hidrofóbicas, incluem:\n",
+      "        *   **Triglicerídeos:** Principal forma de armazenamento de energia.\n",
+      "        *   **Fosfolipídios:** Componentes essenciais das membranas celulares (formam a bicamada lipídica).\n",
+      "        *   **Esteroides:** Incluem hormônios (estrogênio, testosterona, cortisol) e colesterol (precursor de outros esteroides e componente de membrana).\n",
+      "        *   **Isolamento:** Térmico e proteção de órgãos.\n",
+      "4.  **Carboidratos (Açúcares): ~1-2%**\n",
+      "    *   Principalmente na forma de:\n",
+      "        *   **Glicose:** Principal fonte de energia imediata para as células.\n",
+      "        *   **Glicogênio:** Forma de armazenamento de glicose no fígado e músculos.\n",
+      "        *   Componentes menores em glicoproteínas e glicolipídios (sinalização celular, reconhecimento).\n",
+      "5.  **Ácidos Nucleicos (DNA e RNA): <1%**\n",
+      "    *   Embora em pequena proporção em massa, são as moléculas mais importantes para a informação.\n",
+      "        *   **DNA (ácido desoxirribonucleico):** Contém o código genético para construir e manter um organismo.\n",
+      "        *   **RNA (ácido ribonucleico):** Envolvido na expressão gênica, síntese de proteínas e regulação.\n",
+      "6.  **Outras Moléculas Orgânicas:**\n",
+      "    *   **Vitaminas:** Cofatores essenciais para diversas reações enzimáticas.\n",
+      "    *   **Hormônios:** Moléculas sinalizadoras que regulam funções fisiológicas.\n",
+      "    *   **Neurotransmissores:** Mensageiros químicos no sistema nervoso.\n",
+      "    *   **ATP (Adenosina Trifosfato):** A principal molécula de energia para as atividades celulares.\n",
+      "    *   **Metabólitos:** Moléculas intermediárias e produtos finais de vias metabólicas.\n",
+      "\n",
+      "---\n",
+      "\n",
+      "**III. Variações e Dinamismo**\n",
+      "\n",
+      "É crucial notar que essa composição é uma média e varia consideravelmente entre indivíduos e até mesmo dentro do mesmo indivíduo ao longo da vida, dependendo de fatores como:\n",
+      "\n",
+      "*   **Idade:** A proporção de água diminui com a idade.\n",
+      "*   **Sexo:** Diferenças na massa muscular e gordura.\n",
+      "*   **Dieta:** Afeta as reservas de nutrientes e gordura.\n",
+      "*   **Nível de atividade física:** Influencia a massa muscular e óssea.\n",
+      "*   **Estado de saúde:** Doenças podem alterar drasticamente a composição corporal.\n",
+      "\n",
+      "---\n",
+      "\n",
+      "Em suma, somos um fascinante universo de elementos e moléculas, interagindo de maneiras complexas e dinâmicas para sustentar a vida. É um testemunho da elegância da bioquímica e da biologia. É um tema que me apaixona, e espero que esta exploração detalhada tenha sido esclarecedora!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Chamada simples com gemini, bastante arcaica: \n",
+    "response_gemini = client_gemini.models.generate_content(\n",
+    "    model=\"gemini-2.5-flash\", \n",
+    "    config=types.GenerateContentConfig(\n",
+    "        system_instruction=context,\n",
+    "        temperature=0.5),\n",
+    "    contents=\"Qual a composição química geral de uma ser humano\"\n",
+    ")\n",
+    "print(response_gemini.text)"
    ]
   }
  ],
