--- a/simple_call.ipynb
+++ b/simple_call.ipynb
@@ -7,12 +7,12 @@
    "source": [
     "# Como fazer chamadas simples com API? \n",
     "\n",
-    "Antes de mais nada, vamos escolher o LLM utilizado, seja ele o ChatGPT (gepeto), o Gemini etc. Caso você escolha o gepeto, terá de fazer um **pip install openai**, caso escolha o gemini, terá de fazer **pip install google**. Uma vez escolhido o LLM, cria um ambiente virtual para isolar o ambiente de desenvolvimento do seu código com **python -m venv nome-do-seu-venv** e depois ative-o **.\\venv\\Scripts\\Activate.ps1**. "
+    "Antes de mais nada, vamos escolher o LLM utilizado, seja ele o ChatGPT (gepeto), o Gemini etc. Caso você escolha o gepeto, terá de fazer um **pip install openai**, caso escolha o gemini, terá de fazer **pip install google**. Uma vez escolhido o LLM, cria um ambiente virtual para isolar o ambiente de desenvolvimento do seu código com **python -m venv nome-do-seu-venv** e depois ative-o **.\\nome-do-seu-venv\\Scripts\\Activate.ps1**. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "c550b61e",
    "metadata": {},
    "outputs": [],
@@ -23,12 +23,14 @@
     "from google.genai import types\n",
     "\n",
     "# Para validação de campos e geração de uma resposta estruturada\n",
-    "from pydantic import BaseModel\n",
+    "from pydantic import BaseModel, Field\n",
     "from enum import Enum\n",
     "import json\n",
     "\n",
     "# Para a leitura das chaves no arquivo \".env\"\n",
-    "from dotenv import load_dotenv, dotenv_values"
+    "from dotenv import load_dotenv, dotenv_values\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -58,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "71ec5d3e",
    "metadata": {},
    "outputs": [],
@@ -68,18 +70,22 @@
     "# 2 - Você passa uma pergunta ou qulquer coisa que queira saber (input)\n",
     "# As funções fazem uma chamada simples para os modelos de  LLM e a resposta obtida é retornada como resposta\n",
     "\n",
-    "def response_openai(context:str, input:str) -> str:\n",
     "\n",
+    "\n",
+    "# Função que utiliza a API da OpenAI\n",
+    "def response_openai(context:str, input:str) -> str:\n",
     "    response = client_openai.responses.create(\n",
     "        model=\"gpt-4.1-mini\",\n",
     "        instructions=context,\n",
     "        input= input,\n",
     "        temperature=0.5\n",
     "    )\n",
-    "\n",
     "    return response.output_text\n",
     "\n",
     "\n",
+    "\n",
+    "\n",
+    "# Função que utiliza a API do Gemini\n",
     "def response_gemini(context:str, input:str) -> str:\n",
     "        \n",
     "    response = client_gemini.models.generate_content(\n",
@@ -140,12 +146,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 97,
    "id": "4068cdfd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def classificador_openai(context:str, input:str, estrutura=Drogas) -> dict:\n",
+    "def classificador_openai(context:str, input:str, estrutura:Drogas) -> dict:\n",
     "    response = client_openai.responses.parse(  # mudar aqui de .create() para .parse()\n",
     "        model=\"gpt-4.1-mini\",\n",
     "        instructions=context,\n",
@@ -156,17 +162,38 @@
     "    # mudar aqui de \"response.output_text\" para \"response.output_parsed\"\n",
     "    return response.output_parsed.model_dump()\n",
     "\n",
+    "\n",
+    "\n",
+    "\n",
+    "def clasificador_gemini(prompt:str, input:str, estrutura=Drogas) -> dict:\n",
+    "\n",
+    "    content = f\"{prompt}\\n\\nProcesso:\\n{input}\"\n",
+    "\n",
+    "    response = client_gemini.models.generate_content( # mudar aqui de \".generate_content()\" para \".generate_content_stream()\"\n",
+    "        model=\"gemini-2.5-flash\",\n",
+    "        contents=content,\n",
+    "        config={\n",
+    "        \"response_mime_type\": \"application/json\",\n",
+    "        \"response_json_schema\": estrutura.model_json_schema(),\n",
+    "    },  \n",
+    "    )\n",
+    "\n",
+    "    # mudar aqui de \"response.text\" por:\n",
+    "    result = response.candidates[0].content.parts[0].text\n",
+    "    return result\n",
+    "\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 100,
    "id": "d7574806",
    "metadata": {},
    "outputs": [],
    "source": [
-    "processo = \"TRIBUNAL DE JUSTIÇA DO ESTADO DE SÃO PAULO COMARCA de Boituva Foro de Boituva 1ª Vara Rua Manoel dos Santos Freire, 161, Centro - CEP 18550-000, Fone: (15) 3263-2120, Boituva-SP - E-mail: boituva1@tjsp.jus.br 1500586-02.2023.8.26.0569 - lauda SENTENÇA Processo nº: 1500586-02.2023.8.26.0569 Classe - Assunto Ação Penal - Procedimento Ordinário - Tráfico de Drogas e Condutas Afins Autor: Justiça Pública Réu: ROSANA LEMES DE SOUZA Juiz(a) de Direito: Dr(a). Liliana Regina de Araujo Heidorn Abdala Vistos. ROSANA LEMES DE SOUZA foi denunciada como incursa no artigo 33, caput, c/c art. 40, inciso III, ambos da Lei 11.343/06, porque no dia 01 de julho de 2023, aproximadamente às 08h00min, na Estrada Tatuí/Iperó, Área Rural, Estabelecimento Prisional, na cidade de Iperó e comarca de Boituva, ROSANA LEMES DE SOUZA, qualificada a fls. 14 e indiciada a fls. 62, adquiriu e trazia consigo, para fornecer e entregar ao consumo de terceiros, 98,13g (noventa e oito gramas e treze centigramas) líquidos de maconha, acondicionados em 1 (uma) porção, conforme laudo pericial de fls. 31/33 e 106/108, substância entorpecente que determina dependência física e psíquica, sem autorização legal e regulamentar para tanto. Segundo o apurado, a denunciada estava no estabelecimento prisional de Iperó para realização de visitas, quando foi submetida à revista. Ao verificar o que tinha no inteiro de um pacote que a denunciada trazia consigo, foi localizada 1 (uma) porção de maconha no interior de 1 (um) absorvente. As circunstâncias em que se deram o flagrante, evidenciam a prática do tráfico de entorpecentes. Presa em flagrante, a ré foi beneficiada com a liberdade provisória mediante o cumprimento das medidas cautelares previstas no artigo 319, do C.P.P. (fl.89/91). Regularmente notificada (fl. 158), a ré apresentou defesa preliminar (fls.141/144). A denúncia foi recebida (fl. 150). Regularmente citada, foi realizada a instrução processual, com oitiva de duas testemunhas em comum e o interrogatório\"\n",
+    "# É necessário também um bom prompt para garantir a saída de uma resposta que segue a estrutura que nós buscamos\n",
+    "\n",
     "prompt_otimizado = \"\"\"\n",
     "Você é um assistente de inteligência artificial que auxilia na anotação de sentenças judiciais do Tribunal de Justiça de São Paulo em processos envolvendo tráfico de drogas.\n",
     "\n",
@@ -196,9 +223,37 @@
     " \"tipo_pena\": \"fechado/semiaberto/aberto\",\n",
     " \"tempo\": 0\n",
     "}\n",
-    "\"\"\"\n",
-    "saida = classificador_openai(prompt_otimizado, processo)\n"
+    "\"\"\"\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f0657d46",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      " \"escopo\": \"sim\",\n",
+      " \"maconha\": \"sim\",\n",
+      " \"cocaina\": \"nao\",\n",
+      " \"crack\": \"nao\",\n",
+      " \"qtd_maconha\": 98.13,\n",
+      " \"qtd_cocaina\": 0,\n",
+      " \"qtd_crack\": 0,\n",
+      " \"sexo\": \"feminino\",\n",
+      " \"reincidente\": \"não informado\",\n",
+      " \"decisao\": \"parcialmente procedente\",\n",
+      " \"tipo_pena\": \"aberto\",\n",
+      " \"tempo\": 0\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
