--- a/SDK standard/simple_call.ipynb
+++ b/SDK standard/simple_call.ipynb
@@ -36,20 +36,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "db8397b7",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Protegendo as chaves de API e carregando-as em variáveis\n",
-    "config = dotenv_values(\".env\")\n",
-    "openai_api_key = config[\"IRAN_OPENAI_KEY\"]\n",
-    "gemini_api_key = config[\"IRAN_GEMINI_KEY\"]"
+    "config = dotenv_values(\"../.env\")\n",
+    "openai_api_key = config[\"OPENAI_API_KEY\"]\n",
+    "gemini_api_key = config[\"GEMINI_API_KEY\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "71c61a82",
    "metadata": {},
    "outputs": [],
@@ -656,7 +656,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv (3.13.2)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -670,7 +670,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
