feat: Implementando ollama

--- a/LangChain/langchain_basics.ipynb
+++ b/LangChain/langchain_basics.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "ad28c041",
    "metadata": {},
    "outputs": [],
@@ -28,12 +28,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "b4bffc7d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_openai import ChatOpenAI"
+    "from langchain_openai import ChatOpenAI\n",
+    "from langchain_ollama import ChatOllama"
    ]
   },
   {
@@ -46,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "dedb2b5c",
    "metadata": {},
    "outputs": [
@@ -56,7 +57,7 @@
        "True"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,21 +100,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "6600e85f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "AIMessage(content='1 - Cristiano Ronaldo dos Santos Aveiro é um futebolista português considerado um dos maiores jogadores de todos os tempos. Atua como atacante, principalmente como ponta-esquerda ou centroavante, atualmente jogando pelo Al-Nassr e comandando a Seleção Portuguesa como capitão. Detém recordes históricos como maior goleador em jogos oficiais a nível de seleções e clubes, além de possuir múltiplos prêmios individuais, incluindo cinco Bolas de Ouro.\\n\\n2 - Dois fatos interessantes sobre Cristiano Ronaldo:\\n- Ele é o único jogador a vencer nas três ligas europeias mais prestigiadas (Premier League, La Liga e Série A), sendo eleito o melhor jogador e artilheiro em cada uma delas durante suas conquistas.\\n- Cristiano Ronaldo detém quase todos os recordes da UEFA Champions League, sendo o maior artilheiro da história da competição e o jogador com mais nomeações na Equipe do Ano da UEFA, com 15 indicações.', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 195, 'prompt_tokens': 599, 'total_tokens': 794, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_provider': 'openai', 'model_name': 'gpt-4.1-mini-2025-04-14', 'system_fingerprint': 'fp_24710c7f06', 'id': 'chatcmpl-CiOVUaNVLRPLegAaBQ0cRFoixEaZZ', 'service_tier': 'default', 'finish_reason': 'stop', 'logprobs': None}, id='lc_run--df669830-d071-49cf-bae3-2dd376a88122-0', usage_metadata={'input_tokens': 599, 'output_tokens': 195, 'total_tokens': 794, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "context = \"\"\"\n",
     "    Cristiano Ronaldo dos Santos Aveiro é um futebolista português que atua como atacante, mais \n",
@@ -156,7 +146,10 @@
     "\n",
     "\n",
     "# Essa linha é o que fará a comunicação com o gpt-4.1 mini e fará as chamadas via api \n",
-    "llm = ChatOpenAI(temperature=1.0, model=\"gpt-4.1-mini\") \n",
+    "llm = ChatOpenAI(temperature=1.0, model=\"gpt-4.1-mini\")\n",
+    "\n",
+    "# Esse linha faz o análogo mas utilizando o ollama\n",
+    "edge_llm = ChatOllama(temperature=1.0, model=\"gemma3:270m\") \n",
     "\n",
     "\n",
     "# Encadeando o componente da esquerda com o da direita \n",
@@ -166,6 +159,14 @@
     "# Executando o \"chain\" acima\n",
     "response = chain.invoke(input={\"context\":context})"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed8464ad",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
