feat: Implementando novas classes para saídas de respostas estruturadas

--- a/SDK standard/simple_call.ipynb
+++ b/SDK standard/simple_call.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "db8397b7",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "71c61a82",
    "metadata": {},
    "outputs": [],
@@ -100,6 +100,84 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "5df44f7d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "contexto = \"\"\"\n",
+    "Capitu e Bentinho são os personagens centrais de Dom Casmurro, \n",
+    "de Machado de Assis, um romance realista que explora o ciúme doentio de Bentinho \n",
+    "e a dúvida sobre a suposta traição de Capitu com seu melhor amigo, Escobar, \n",
+    "num contexto social do Rio de Janeiro do século XIX, marcado por aparências, \n",
+    "classes sociais e papéis femininos restritos, onde a narrativa enviesada de Bentinho, \n",
+    "já um homem amargurado, impede o leitor de saber a verdade absoluta, \n",
+    "deixando a ambiguidade da inocência ou culpa de Capitu como o grande enigma da obra. \n",
+    "\"\"\"\n",
+    "\n",
+    "input = \"Capitu traiu Bentinho?\"\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "157301b3",
+   "metadata": {},
+   "source": [
+    "### Teste OpenAI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "97652add",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'A questão sobre se Capitu traiu ou não Bentinho é o grande enigma de *Dom Casmurro* e permanece aberta à interpretação, pois Machado de Assis constrói a narrativa de forma ambígua e subjetiva.\\n\\nBentinho, narrador da história, é um personagem ciumento e desconfiado, que relata os fatos de maneira enviesada, influenciado por suas próprias inseguranças e ressentimentos. Ele suspeita que Capitu tenha tido um caso com seu melhor amigo, Escobar, mas nunca apresenta provas concretas. A dúvida sobre a fidelidade de Capitu é deixada propositalmente no ar, fazendo com que o leitor questione a confiabilidade da narrativa e reflita sobre temas como ciúme, memória e verdade.\\n\\nPortanto, não há uma resposta definitiva no texto: Capitu pode ter sido inocente ou culpada, e essa ambiguidade é justamente o que torna *Dom Casmurro* uma obra tão rica e fascinante.'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response_openai(contexto, input)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cadd44fc",
+   "metadata": {},
+   "source": [
+    "### Teste Gemini"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "140c21f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Essa é a pergunta de um milhão de dólares e o grande enigma de \"Dom Casmurro\"!\\n\\n**Não há uma resposta definitiva.** Machado de Assis construiu a obra de forma a deixar o leitor na dúvida, sem nunca confirmar ou negar a traição de Capitu.\\n\\nAqui estão os pontos-chave para entender por que a questão permanece em aberto:\\n\\n1.  **O Narrador Não Confiável:** A história é contada por Bentinho, já um homem idoso e amargurado, consumido pelo ciúme. Ele é o único narrador, e sua perspectiva é enviesada, subjetiva e influenciada por suas próprias inseguranças e paranoia. Tudo o que sabemos sobre Capitu e Escobar é filtrado através dos olhos e da mente de Bentinho.\\n\\n2.  **As \"Provas\" de Bentinho:** As evidências que Bentinho apresenta são circunstanciais e interpretativas:\\n    *   A suposta semelhança física entre seu filho Ezequiel e Escobar.\\n    *   A maneira como Capitu olhava para Escobar.\\n    *   Seus famosos \"olhos de ressaca\", que ele interpretava como capazes de \"arrastar tudo para dentro\".\\n\\n3.  **A Ambiguidade Deliberada:** A genialidade de Machado de Assis reside em criar uma narrativa que permite múltiplas interpretações. Ele não queria dar uma resposta fácil. A dúvida é o cerne do romance, convidando o leitor a ser um \"juiz\" e a formar sua própria opinião com base nas evidências apresentadas (e na falta de evidências concretas).\\n\\n4.  **A Voz de Capitu:** Nunca ouvimos a versão de Capitu. Ela é um personagem complexo e enigmático, mas sua voz é silenciada pela narrativa de Bentinho.\\n\\nPortanto, a pergunta \"Capitu traiu Bentinho?\" não tem um \"sim\" ou \"não\" definitivo. É o leitor quem deve ponderar as \"provas\" de Bentinho e decidir se acredita ou não em sua versão dos fatos. Essa incerteza é o que torna \"Dom Casmurro\" uma das obras mais fascinantes e debatidas da literatura brasileira.'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response_gemini(contexto, input)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "2afcf949",
    "metadata": {},
@@ -119,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "dfad6ab5",
    "metadata": {},
    "outputs": [],
@@ -128,26 +206,60 @@
     "\n",
     "class Escopo(Enum): # Enum garante que saia apenas uma das opções presentes no escopo da classe\n",
     "    SIM = \"sim\"\n",
+    "    NAO = \"não\"\n",
+    "\n",
+    "class Maconha(Enum):\n",
+    "    SIM = \"sim\"\n",
+    "    NAO = \"não\"\n",
+    "\n",
+    "class Cocaina(Enum):\n",
+    "    SIM = \"sim\"\n",
     "    NAO = \"nao\"\n",
+    "\n",
+    "class Crack(Enum):\n",
+    "    SIM = \"sim\"\n",
+    "    NAO = \"nao\"\n",
+    "\n",
+    "class Sexo(Enum):\n",
+    "    MASC = \"masculino\"\n",
+    "    FEM = \"feminino\"\n",
+    "    NULL = \"não informado\"\n",
+    "\n",
+    "class Reincidente(Enum):\n",
+    "    SIM = \"sim\"\n",
+    "    NAO = \"não\"\n",
+    "    NULL = \"não informado\"\n",
+    "\n",
+    "class Decisao(Enum):\n",
+    "    PROCEDENTE = \"procedente\"\n",
+    "    IMPROCEDENTE = \"improcedente\"\n",
+    "    PARCIAL = \"parcialmente procedente\"\n",
+    "\n",
+    "\n",
+    "class Pena(Enum):\n",
+    "    FECHADO = \"fechado\"\n",
+    "    ABERTO = \"aberto\"\n",
+    "    SEMIABERTO = \"semiaberto\"\n",
+    "\n",
     "\n",
     "class Drogas(BaseModel): # BaseModel garante a validação dos campos referentes aos atributos da classe \n",
     "    escopo: Escopo\n",
-    "    maconha: str\n",
-    "    cocaina: str\n",
-    "    crack: str\n",
+    "    maconha: Maconha\n",
+    "    cocaina: Cocaina\n",
+    "    crack: Crack\n",
     "    qtd_maconha: float\n",
     "    qtd_cocaina: float\n",
     "    qtd_crack: float\n",
-    "    sexo: str\n",
-    "    reincidente: str\n",
-    "    decisao: str\n",
-    "    tipo_pena: str\n",
+    "    sexo: Sexo\n",
+    "    reincidente: Reincidente\n",
+    "    decisao: Decisao\n",
+    "    tipo_pena: Pena\n",
     "    tempo: float\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "4068cdfd",
    "metadata": {},
    "outputs": [],
@@ -170,7 +282,7 @@
     "\n",
     "    content = f\"{prompt}\\n\\nProcesso:\\n{input}\"\n",
     "\n",
-    "    response = client_gemini.models.generate_content( # mudar aqui de \".generate_content()\" para \".generate_content_stream()\"\n",
+    "    response = client_gemini.models.generate_content( \n",
     "        model=\"gemini-2.5-flash\",\n",
     "        contents=content,\n",
     "        config={\n",
@@ -189,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "d7574806",
    "metadata": {},
    "outputs": [],
@@ -237,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "f0657d46",
    "metadata": {},
    "outputs": [
@@ -566,7 +678,7 @@
        "[991 rows x 14 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,50 +689,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1f8dab69",
+   "metadata": {},
+   "source": [
+    "### Teste OpenAI"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "8dff3ff2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'escopo': 'nao',\n",
+       "{'escopo': 'não',\n",
        " 'maconha': 'sim',\n",
        " 'cocaina': 'sim',\n",
        " 'crack': 'nao',\n",
        " 'qtd_maconha': 49.0,\n",
        " 'qtd_cocaina': 39.0,\n",
        " 'qtd_crack': 0.0,\n",
-       " 'sexo': 'nao informado',\n",
+       " 'sexo': 'não informado',\n",
        " 'reincidente': 'sim',\n",
        " 'decisao': 'procedente',\n",
        " 'tipo_pena': 'fechado',\n",
        " 'tempo': 81.0}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Testando saída com ChatGPT:\n",
     "processo = drogas[drogas[\"processo\"] == drogas[\"processo\"][777]][\"julgado\"].iloc[0]\n",
     "resultado_openai = classificador_openai(prompt, processo, Drogas)\n",
     "resultado_openai"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9ed8b948",
+   "metadata": {},
+   "source": [
+    "### Teste Gemini"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "1f8c69e8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'escopo': 'nao',\n",
+       "{'escopo': 'não',\n",
        " 'maconha': 'sim',\n",
        " 'cocaina': 'sim',\n",
        " 'crack': 'nao',\n",
@@ -628,19 +755,18 @@
        " 'qtd_cocaina': 39.11,\n",
        " 'qtd_crack': 0,\n",
        " 'sexo': 'não informado',\n",
-       " 'reincidente': 'sim',\n",
+       " 'reincidente': 'não informado',\n",
        " 'decisao': 'procedente',\n",
        " 'tipo_pena': 'fechado',\n",
        " 'tempo': 81}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Testando saída com Gemini:\n",
     "resultado_gemini = classificador_gemini(prompt, processo, Drogas)\n",
     "resultado_gemini"
    ]
@@ -670,7 +796,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
