feat: function calling

--- a/LangChain/ReAct Agent/agent.ipynb
+++ b/LangChain/ReAct Agent/agent.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "4efce83a",
    "metadata": {},
    "outputs": [
@@ -124,17 +124,17 @@
    "source": [
     "from langchain_tavily import TavilySearch\n",
     "\n",
-    "@tool\n",
+    "@tool(\"get_text_length\", description=\"Retorna o comprimento (número de caracteres) de um texto fornecido.\")\n",
     "def get_text_length(text:str) -> int:\n",
-    "    \"\"\" returns the length of a text by chatacter \"\"\" # essa description é obrigatória para o agente identificar qual tool ele irá usar\n",
+    "    \"\"\" Retorna o length do texto em caracteres (após strip simples) \"\"\" # essa description é obrigatória para o agente identificar qual tool ele irá usar\n",
     "    print(f\"get_text_length enter with {text=}\")\n",
     "    text = text.strip(\"'\\n\").strip('\"')\n",
     "    return len(text)\n",
     "\n",
+    "\n",
+    "\n",
     "llm = ChatOpenAI(temperature=0.5, model=\"gpt-4.1-mini\")\n",
     "tools_list = [TavilySearch(), get_text_length]\n",
-    "\n",
-    "\n",
     "\n",
     "# O agente (que contém o LLM e a lista de tools, aqui TavilySearch) decide se precisa chamar ferramentas:\n",
     "# Se necessário, ele chama TavilySearch() para buscar na web (o tool devolve resultados).\n",
