--- a/LangChain/ReAct Agent/structured_output.ipynb
+++ b/LangChain/ReAct Agent/structured_output.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "3ded2197",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "01901b35",
    "metadata": {},
    "outputs": [],
@@ -45,13 +45,12 @@
     "class AgentResponse(BaseModel):\n",
     "    \"\"\"Schema para o return do agente com respostas e fontes de consulta\"\"\"\n",
     "    answer:str = Field(description=\"A resposta do agente após as querys\")\n",
-    "    sources: List[Source] = Field(default_factory=list, description=\"Lista das fontes utilizadas para gerar a resposta\")\n",
-    "\n"
+    "    sources: List[Source] = Field(default_factory=list, description=\"Lista das fontes utilizadas para gerar a resposta\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "cdbb2e94",
    "metadata": {},
    "outputs": [],
