feat: function calling

--- a/SDK standard/sdk_standard.ipynb
+++ b/SDK standard/sdk_standard.ipynb
@@ -136,7 +136,7 @@
     {
      "data": {
       "text/plain": [
-       "'A questão sobre se Capitu traiu ou não Bentinho é o grande enigma de *Dom Casmurro* e permanece aberta à interpretação, pois Machado de Assis constrói a narrativa de forma ambígua e subjetiva.\\n\\nBentinho, narrador da história, é um personagem ciumento e desconfiado, que relata os fatos de maneira enviesada, influenciado por suas próprias inseguranças e ressentimentos. Ele suspeita que Capitu tenha tido um caso com seu melhor amigo, Escobar, mas nunca apresenta provas concretas. A dúvida sobre a fidelidade de Capitu é deixada propositalmente no ar, fazendo com que o leitor questione a confiabilidade da narrativa e reflita sobre temas como ciúme, memória e verdade.\\n\\nPortanto, não há uma resposta definitiva no texto: Capitu pode ter sido inocente ou culpada, e essa ambiguidade é justamente o que torna *Dom Casmurro* uma obra tão rica e fascinante.'"
+       "'A questão sobre se Capitu traiu Bentinho é um dos maiores mistérios da literatura brasileira e um dos temas centrais de *Dom Casmurro*, de Machado de Assis. O romance é narrado em primeira pessoa por Bentinho, que é um narrador não confiável devido ao seu ciúme obsessivo e amargura. Ele suspeita que Capitu tenha tido um caso com seu melhor amigo, Escobar, mas nunca apresenta provas concretas dessa traição.\\n\\nMachado de Assis deixa essa dúvida em aberto, criando uma ambiguidade intencional que convida o leitor a interpretar os fatos por si mesmo. Portanto, não há uma resposta definitiva no texto sobre a fidelidade de Capitu. Essa ambiguidade é justamente o que torna a obra tão rica e discutida até hoje.'"
       ]
      },
      "execution_count": 6,
@@ -165,7 +165,7 @@
     {
      "data": {
       "text/plain": [
-       "'Essa é a pergunta de um milhão de dólares e o grande enigma de \"Dom Casmurro\"!\\n\\n**Não há uma resposta definitiva.** Machado de Assis construiu a obra de forma a deixar o leitor na dúvida, sem nunca confirmar ou negar a traição de Capitu.\\n\\nAqui estão os pontos-chave para entender por que a questão permanece em aberto:\\n\\n1.  **O Narrador Não Confiável:** A história é contada por Bentinho, já um homem idoso e amargurado, consumido pelo ciúme. Ele é o único narrador, e sua perspectiva é enviesada, subjetiva e influenciada por suas próprias inseguranças e paranoia. Tudo o que sabemos sobre Capitu e Escobar é filtrado através dos olhos e da mente de Bentinho.\\n\\n2.  **As \"Provas\" de Bentinho:** As evidências que Bentinho apresenta são circunstanciais e interpretativas:\\n    *   A suposta semelhança física entre seu filho Ezequiel e Escobar.\\n    *   A maneira como Capitu olhava para Escobar.\\n    *   Seus famosos \"olhos de ressaca\", que ele interpretava como capazes de \"arrastar tudo para dentro\".\\n\\n3.  **A Ambiguidade Deliberada:** A genialidade de Machado de Assis reside em criar uma narrativa que permite múltiplas interpretações. Ele não queria dar uma resposta fácil. A dúvida é o cerne do romance, convidando o leitor a ser um \"juiz\" e a formar sua própria opinião com base nas evidências apresentadas (e na falta de evidências concretas).\\n\\n4.  **A Voz de Capitu:** Nunca ouvimos a versão de Capitu. Ela é um personagem complexo e enigmático, mas sua voz é silenciada pela narrativa de Bentinho.\\n\\nPortanto, a pergunta \"Capitu traiu Bentinho?\" não tem um \"sim\" ou \"não\" definitivo. É o leitor quem deve ponderar as \"provas\" de Bentinho e decidir se acredita ou não em sua versão dos fatos. Essa incerteza é o que torna \"Dom Casmurro\" uma das obras mais fascinantes e debatidas da literatura brasileira.'"
+       "'Essa é a **pergunta central e o grande enigma de Dom Casmurro!**\\n\\n**Não há uma resposta definitiva na obra.** Machado de Assis, de forma genial, construiu a narrativa de tal maneira que o leitor nunca tem certeza se Capitu traiu Bentinho ou não.\\n\\nAqui estão os pontos chave para entender essa ambiguidade:\\n\\n1.  **O Narrador Não Confiável:** A história é contada por Bentinho (já Bento Santiago), um homem velho, amargurado e consumido pelo ciúme. Ele é o único narrador, e tudo o que sabemos é filtrado pela sua perspectiva, suas memórias e suas suspeitas. Ele interpreta cada gesto, cada olhar de Capitu e do amigo Escobar através da lente de sua paranoia.\\n2.  **A Ambiguidade Deliberada:** Machado de Assis não queria dar uma resposta. Ele queria que o leitor fosse o \"juiz\", analisando as evidências apresentadas por Bentinho e formando sua própria opinião. A genialidade da obra reside justamente em nos colocar nessa posição de dúvida constante.\\n3.  **As \"Provas\" de Bentinho:** As principais \"provas\" de Bentinho são:\\n    *   A semelhança do filho, Ezequiel, com Escobar.\\n    *   Os famosos \"olhos de ressaca\" de Capitu, que ele via como traiçoeiros e manipuladores.\\n    *   Momentos de silêncio, olhares trocados e a proximidade entre Capitu e Escobar.\\n    *   O fato de Capitu chorar genuinamente na morte de Escobar (Bentinho interpreta isso como um luto por um amante, não por um amigo).\\n\\n**Conclusão:**\\n\\nVocê, como leitor, é quem decide. Alguns leitores acreditam que Capitu foi uma vítima inocente do ciúme doentio de Bentinho. Outros veem Capitu como uma mulher astuta e adúltera. E muitos simplesmente abraçam a incerteza, reconhecendo que a verdade é inatingível dentro da narrativa de Bentinho.\\n\\nEssa ambiguidade é o que torna *Dom Casmurro* uma das maiores obras da literatura brasileira e universal.'"
       ]
      },
      "execution_count": 7,
@@ -709,11 +709,11 @@
        " 'maconha': 'sim',\n",
        " 'cocaina': 'sim',\n",
        " 'crack': 'nao',\n",
-       " 'qtd_maconha': 49.0,\n",
-       " 'qtd_cocaina': 39.0,\n",
+       " 'qtd_maconha': 49.7,\n",
+       " 'qtd_cocaina': 39.11,\n",
        " 'qtd_crack': 0.0,\n",
        " 'sexo': 'não informado',\n",
-       " 'reincidente': 'sim',\n",
+       " 'reincidente': 'não informado',\n",
        " 'decisao': 'procedente',\n",
        " 'tipo_pena': 'fechado',\n",
        " 'tempo': 81.0}"
